--- a/notebooks/data_showcase.ipynb
+++ b/notebooks/data_showcase.ipynb
@@ -24,8 +24,8 @@
     "\n",
     "from src.datasets import AndiDataset\n",
     "\n",
-    "plt.rcParams['figure.constrained_layout.use'] = False\n",
-    "sns.set_style('whitegrid')"
+    "plt.rcParams[\"figure.constrained_layout.use\"] = False\n",
+    "sns.set_style(\"whitegrid\")"
    ]
   },
   {
@@ -44,8 +44,8 @@
    "outputs": [],
    "source": [
     "# set font family to Lato-Regular\n",
-    "rcParams['font.family'] = \"Lato\"\n",
-    "rcParams['font.sans-serif'] = \"Lato\""
+    "rcParams[\"font.family\"] = \"Lato\"\n",
+    "rcParams[\"font.sans-serif\"] = \"Lato\""
    ]
   },
   {
@@ -60,10 +60,12 @@
     "muli_state = dataset_creator.multi_state(6, T, [1.5, 0.6], [[1, 0.5], [2, 0.5]])[0]\n",
     "confinment = dataset_creator.confinemnet(10, T, [1.5, 0.6], [[1, 0.5], [2, 0.5]])[0]\n",
     "immobile = dataset_creator.immobile(10, T, 1.5, 1)[0]\n",
-    "dimmerization = dataset_creator.dimmerization(20, T, [1.5, 0.6], [[1, 0.5], [2, 0.5]])[0]\n",
+    "dimmerization = dataset_creator.dimmerization(20, T, [1.5, 0.6], [[1, 0.5], [2, 0.5]])[\n",
+    "    0\n",
+    "]\n",
     "\n",
     "all_data = [single_state, muli_state, confinment, immobile, dimmerization]\n",
-    "labels = ['Single State', 'Multi State', 'Confinment', 'Immobile', 'Dimmerization']"
+    "labels = [\"Single State\", \"Multi State\", \"Confinment\", \"Immobile\", \"Dimmerization\"]"
    ]
   },
   {
@@ -72,8 +74,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_lines_styles = ['-', '--', '-.', ':', '-']\n",
-    "all_colors = [\"#b30000\", \"#7c1158\", \"#4421af\", \"#1a53ff\", \"#0d88e6\", \"#00b7c7\", \"#5ad45a\", \"#8be04e\", \"#ebdc78\"]"
+    "all_lines_styles = [\"-\", \"--\", \"-.\", \":\", \"-\"]\n",
+    "all_colors = [\n",
+    "    \"#b30000\",\n",
+    "    \"#7c1158\",\n",
+    "    \"#4421af\",\n",
+    "    \"#1a53ff\",\n",
+    "    \"#0d88e6\",\n",
+    "    \"#00b7c7\",\n",
+    "    \"#5ad45a\",\n",
+    "    \"#8be04e\",\n",
+    "    \"#ebdc78\",\n",
+    "]"
    ]
   },
   {
@@ -84,10 +96,13 @@
    "source": [
     "def plot_trajectories(ax, trajs):\n",
     "    for i in range(trajs.shape[1]):\n",
-    "        ax.plot(trajs[:, i, 0], trajs[:, i, 1], \n",
-    "                linewidth=1.5, \n",
-    "                linestyle=np.random.choice(all_lines_styles), \n",
-    "                c=np.random.choice(all_colors))"
+    "        ax.plot(\n",
+    "            trajs[:, i, 0],\n",
+    "            trajs[:, i, 1],\n",
+    "            linewidth=1.5,\n",
+    "            linestyle=np.random.choice(all_lines_styles),\n",
+    "            c=np.random.choice(all_colors),\n",
+    "        )"
    ]
   },
   {
@@ -157,15 +172,18 @@
    "source": [
     "ps = [0.01, 0.05, 0.2]\n",
     "\n",
+    "\n",
     "def plot_change_points(ax, traj, labels, p):\n",
     "    changepoints = label_continuous_to_list(labels[:, 0, :])[0]\n",
     "    x, y = traj[:, 0, 0], traj[:, 0, 1]\n",
     "    xs = np.arange(len(x))\n",
-    "    ax.plot(xs, x, label='x', linestyle='--')\n",
-    "    ax.plot(xs, y, label='y', linestyle='-')\n",
+    "    ax.plot(xs, x, label=\"x\", linestyle=\"--\")\n",
+    "    ax.plot(xs, y, label=\"y\", linestyle=\"-\")\n",
     "    for i in range(len(changepoints)):\n",
-    "        ax.axvline(changepoints[i], c='red', linestyle='--')\n",
-    "    ax.set_title(\"Number of Change Points: \" + str(len(changepoints)) + \" $(p=\" + str(p) + \")$\")"
+    "        ax.axvline(changepoints[i], c=\"red\", linestyle=\"--\")\n",
+    "    ax.set_title(\n",
+    "        \"Number of Change Points: \" + str(len(changepoints)) + \" $(p=\" + str(p) + \")$\"\n",
+    "    )"
    ]
   },
   {
@@ -174,7 +192,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trajectories_and_labels = [models_phenom().multi_state(1, 150, M=[[1-ps[i], ps[i]], [ps[i], 1-ps[i]]], alphas=[[1.7, 0.], [2.5, 0.1]]) for i in range(3)]"
+    "trajectories_and_labels = [\n",
+    "    models_phenom().multi_state(\n",
+    "        1,\n",
+    "        150,\n",
+    "        M=[[1 - ps[i], ps[i]], [ps[i], 1 - ps[i]]],\n",
+    "        alphas=[[1.7, 0.0], [2.5, 0.1]],\n",
+    "    )\n",
+    "    for i in range(3)\n",
+    "]"
    ]
   },
   {
@@ -202,7 +228,7 @@
     "plt.tight_layout()\n",
     "# get the legend from each plot and combine them\n",
     "handles, labels = axes[0].get_legend_handles_labels()\n",
-    "fig.legend(handles, labels, loc='right', bbox_to_anchor=(1.07, 0.5), fontsize=15)\n",
+    "fig.legend(handles, labels, loc=\"right\", bbox_to_anchor=(1.07, 0.5), fontsize=15)\n",
     "plt.savefig(\"../figures/change_points.pdf\")\n",
     "plt.show()"
    ]
