--- a/notebooks/hypertuning.ipynb
+++ b/notebooks/hypertuning.ipynb
@@ -38,7 +38,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_results = json.load(open(os.path.join(\"..\", \"data\", \"results\", \"thresholds.json\"), \"r\"))"
+    "all_results = json.load(\n",
+    "    open(os.path.join(\"..\", \"data\", \"results\", \"thresholds.json\"), \"r\")\n",
+    ")"
    ]
   },
   {
@@ -63,8 +65,12 @@
     "linestyles = [\"-\", \"--\", \"-.\"]\n",
     "\n",
     "for idx, (window_length, results) in enumerate(all_results.items()):\n",
-    "    ax[0].plot(thresholds, results[\"f1\"], label=window_length, linestyle=linestyles[idx])\n",
-    "    ax[1].plot(thresholds, results[\"rmse\"], label=window_length, linestyle=linestyles[idx])\n",
+    "    ax[0].plot(\n",
+    "        thresholds, results[\"f1\"], label=window_length, linestyle=linestyles[idx]\n",
+    "    )\n",
+    "    ax[1].plot(\n",
+    "        thresholds, results[\"rmse\"], label=window_length, linestyle=linestyles[idx]\n",
+    "    )\n",
     "\n",
     "ax[0].set_title(\"Averaged F1-score\")\n",
     "ax[0].set_xlabel(\"Threshold\")\n",
@@ -79,7 +85,9 @@
     "# common legend\n",
     "handles, labels = ax[1].get_legend_handles_labels()\n",
     "\n",
-    "fig.legend(handles, labels, loc='center right', fontsize=14, title=\"Window length\")#, bbox_to_anchor=(1, 1))\n",
+    "fig.legend(\n",
+    "    handles, labels, loc=\"center right\", fontsize=14, title=\"Window length\"\n",
+    ")  # , bbox_to_anchor=(1, 1))\n",
     "plt.savefig(os.path.join(\"..\", \"figures\", \"thresholds.pdf\"))\n",
     "plt.show()"
    ]
