--- a/notebooks/main_results.ipynb
+++ b/notebooks/main_results.ipynb
@@ -142,8 +142,9 @@
     "def get_table_per_length(length):\n",
     "    latex = (\n",
     "        df[df[\"traj_length\"] == length]\n",
-    "        .groupby([\"label\", \"detector\"])\n",
-    "        [[\"f1\", \"rmse\", \"jaccard\", \"annotation_error\", \"alpha_cp\"]]\n",
+    "        .groupby([\"label\", \"detector\"])[\n",
+    "            [\"f1\", \"rmse\", \"jaccard\", \"annotation_error\", \"alpha_cp\"]\n",
+    "        ]\n",
     "        .agg(\"mean\")\n",
     "    ).to_latex(float_format=\"%.4f\")\n",
     "    return latex"
