--- a/notebooks/train_results.ipynb
+++ b/notebooks/train_results.ipynb
@@ -15,7 +15,14 @@
     "import seaborn as sns\n",
     "import tensorflow as tf\n",
     "from keras.saving import load_model\n",
-    "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score, confusion_matrix, recall_score, precision_score"
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    f1_score,\n",
+    "    roc_auc_score,\n",
+    "    confusion_matrix,\n",
+    "    recall_score,\n",
+    "    precision_score,\n",
+    ")"
    ]
   },
   {
@@ -43,7 +50,10 @@
    "outputs": [],
    "source": [
     "models = [\"cnn\", \"lstm\", \"cnn_lstm\", \"cnn_lstm_attention\"]\n",
-    "histories = [json.load(open(os.path.join(path, f\"{model}_training_results_15.json\"))) for model in models]"
+    "histories = [\n",
+    "    json.load(open(os.path.join(path, f\"{model}_training_results_15.json\")))\n",
+    "    for model in models\n",
+    "]"
    ]
   },
   {
@@ -54,7 +64,8 @@
    "source": [
     "linestyles = [\"-\", \"--\", \"-.\", \":\"]\n",
     "\n",
-    "def plot_training_history(loss_or_acc, histories, name=''):\n",
+    "\n",
+    "def plot_training_history(loss_or_acc, histories, name=\"\"):\n",
     "    N = len(histories[0][loss_or_acc])\n",
     "\n",
     "    fig, ax = plt.subplots(1, 2, figsize=(12, 6))\n",
@@ -62,7 +73,7 @@
     "        ax[0].plot(history[loss_or_acc], label=model, linestyle=linestyles[i])\n",
     "    ax[0].set_title(f\"{loss_or_acc.capitalize()} on training set\")\n",
     "    ax[0].set_xlabel(\"Epoch\")\n",
-    "    ax[0].set_xticks(np.arange(N), np.arange(1, N+1))\n",
+    "    ax[0].set_xticks(np.arange(N), np.arange(1, N + 1))\n",
     "    ax[0].set_ylabel(loss_or_acc.capitalize())\n",
     "    ax[0].legend()\n",
     "\n",
@@ -70,11 +81,13 @@
     "        ax[1].plot(history[f\"val_{loss_or_acc}\"], label=model, linestyle=linestyles[i])\n",
     "    ax[1].set_title(f\"{loss_or_acc.capitalize()} on validation set\")\n",
     "    ax[1].set_xlabel(\"Epoch\")\n",
-    "    ax[1].set_xticks(np.arange(N), np.arange(1, N+1))\n",
+    "    ax[1].set_xticks(np.arange(N), np.arange(1, N + 1))\n",
     "    ax[1].set_ylabel(loss_or_acc.capitalize())\n",
     "    ax[1].legend()\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(os.path.join(\"..\", \"figures\", f\"{loss_or_acc}_training_results{name}.pdf\"))\n",
+    "    plt.savefig(\n",
+    "        os.path.join(\"..\", \"figures\", f\"{loss_or_acc}_training_results{name}.pdf\")\n",
+    "    )\n",
     "    plt.show()"
    ]
   },
@@ -136,7 +149,9 @@
     }
    ],
    "source": [
-    "models_networks = [load_model(os.path.join(\"..\", \"models\", f\"{model}_15.keras\")) for model in models]"
+    "models_networks = [\n",
+    "    load_model(os.path.join(\"..\", \"models\", f\"{model}_15.keras\")) for model in models\n",
+    "]"
    ]
   },
   {
@@ -146,11 +161,10 @@
    "outputs": [],
    "source": [
     "def get_model_summary_table(models, models_names):\n",
-    "    df = (\n",
-    "        pd.DataFrame(np.zeros((len(models), 3)),\n",
-    "                     columns=[\"Model\", \"Number of layers\", \"Number of parameters\"])\n",
-    "        .astype({\"Model\": \"str\", \"Number of layers\": \"int\", \"Number of parameters\": \"int\"})\n",
-    "    )\n",
+    "    df = pd.DataFrame(\n",
+    "        np.zeros((len(models), 3)),\n",
+    "        columns=[\"Model\", \"Number of layers\", \"Number of parameters\"],\n",
+    "    ).astype({\"Model\": \"str\", \"Number of layers\": \"int\", \"Number of parameters\": \"int\"})\n",
     "    for i, model in enumerate(models):\n",
     "        num_layers = int(len(model.layers))\n",
     "        num_params = int(model.count_params())\n",
@@ -193,7 +207,9 @@
    "source": [
     "test_X = np.load(os.path.join(\"..\", \"data\", \"classifier\", \"15\", \"test\", \"X_test.npy\"))\n",
     "test_y = np.load(os.path.join(\"..\", \"data\", \"classifier\", \"15\", \"test\", \"y_test.npy\"))\n",
-    "test_labels = np.load(os.path.join(\"..\", \"data\", \"classifier\", \"15\", \"test\", \"labels_test.npy\"))\n",
+    "test_labels = np.load(\n",
+    "    os.path.join(\"..\", \"data\", \"classifier\", \"15\", \"test\", \"labels_test.npy\")\n",
+    ")\n",
     "test_dataset = tf.data.Dataset.from_tensor_slices((test_X, test_y)).batch(32)"
    ]
   },
@@ -226,7 +242,7 @@
     "metrics = {\n",
     "    \"accuracy\": accuracy_score,\n",
     "    \"f1_score\": f1_score,\n",
-    "    \"roc_auc_score\": roc_auc_score\n",
+    "    \"roc_auc_score\": roc_auc_score,\n",
     "}"
    ]
   },
@@ -343,7 +359,7 @@
     "    \"accuracy\": accuracy_score,\n",
     "    \"f1_score\": f1_score,\n",
     "    \"recall\": recall_score,\n",
-    "    \"precision\": precision_score\n",
+    "    \"precision\": precision_score,\n",
     "}"
    ]
   },
@@ -359,7 +375,9 @@
     "        results[label] = {}\n",
     "        indices = np.where(test_labels == label)\n",
     "        for metric_name, metric in label_metrics.items():\n",
-    "            results[label][metric_name] = metric(test_y[indices], np.round(preds[-1][indices]))\n",
+    "            results[label][metric_name] = metric(\n",
+    "                test_y[indices], np.round(preds[-1][indices])\n",
+    "            )\n",
     "    return pd.DataFrame(results)"
    ]
   },
@@ -387,7 +405,9 @@
     }
    ],
    "source": [
-    "print(get_results_table_per_label(preds, test_y, test_labels, label_metrics).T.to_latex()) "
+    "print(\n",
+    "    get_results_table_per_label(preds, test_y, test_labels, label_metrics).T.to_latex()\n",
+    ")"
    ]
   },
   {
@@ -397,8 +417,16 @@
    "outputs": [],
    "source": [
     "windows = [10, 20]\n",
-    "other_models = [load_model(os.path.join(\"..\", \"models\", f\"cnn_lstm_attention_{window}.keras\")) for window in windows]\n",
-    "other_histories = [json.load(open(os.path.join(path, f\"cnn_lstm_attention_{window}_training_results.json\"))) for window in windows]"
+    "other_models = [\n",
+    "    load_model(os.path.join(\"..\", \"models\", f\"cnn_lstm_attention_{window}.keras\"))\n",
+    "    for window in windows\n",
+    "]\n",
+    "other_histories = [\n",
+    "    json.load(\n",
+    "        open(os.path.join(path, f\"cnn_lstm_attention_{window}_training_results.json\"))\n",
+    "    )\n",
+    "    for window in windows\n",
+    "]"
    ]
   },
   {
@@ -407,10 +435,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_Xs = [np.load(os.path.join(\"..\", \"data\", \"classifier\", f\"{window}\", \"test\", \"X_test.npy\")) for window in windows]\n",
-    "test_ys = [np.load(os.path.join(\"..\", \"data\", \"classifier\", f\"{window}\", \"test\", \"y_test.npy\")) for window in windows]\n",
-    "test_datasets = [tf.data.Dataset.from_tensor_slices((test_X, test_y)).batch(32) for test_X, test_y in zip(test_Xs, test_ys)]\n",
-    "test_labels_ = [np.load(os.path.join(\"..\", \"data\", \"classifier\", f\"{window}\", \"test\", \"labels_test.npy\")) for window in windows]\n",
+    "test_Xs = [\n",
+    "    np.load(os.path.join(\"..\", \"data\", \"classifier\", f\"{window}\", \"test\", \"X_test.npy\"))\n",
+    "    for window in windows\n",
+    "]\n",
+    "test_ys = [\n",
+    "    np.load(os.path.join(\"..\", \"data\", \"classifier\", f\"{window}\", \"test\", \"y_test.npy\"))\n",
+    "    for window in windows\n",
+    "]\n",
+    "test_datasets = [\n",
+    "    tf.data.Dataset.from_tensor_slices((test_X, test_y)).batch(32)\n",
+    "    for test_X, test_y in zip(test_Xs, test_ys)\n",
+    "]\n",
+    "test_labels_ = [\n",
+    "    np.load(\n",
+    "        os.path.join(\"..\", \"data\", \"classifier\", f\"{window}\", \"test\", \"labels_test.npy\")\n",
+    "    )\n",
+    "    for window in windows\n",
+    "]\n",
     "unique_labels = [np.unique(test_labels) for test_labels in test_labels_][0]"
    ]
   },
@@ -429,7 +471,10 @@
     }
    ],
    "source": [
-    "preds_other = [model.predict(test_dataset) for model, test_dataset in zip(other_models, test_datasets)]"
+    "preds_other = [\n",
+    "    model.predict(test_dataset)\n",
+    "    for model, test_dataset in zip(other_models, test_datasets)\n",
+    "]"
    ]
   },
   {
@@ -444,7 +489,9 @@
     "        results[label] = {}\n",
     "        indices = np.where(test_labels == label)\n",
     "        for metric_name, metric in label_metrics.items():\n",
-    "            results[label][metric_name] = metric(test_y[indices], np.round(preds[indices]))\n",
+    "            results[label][metric_name] = metric(\n",
+    "                test_y[indices], np.round(preds[indices])\n",
+    "            )\n",
     "    return pd.DataFrame(results)"
    ]
   },
@@ -472,7 +519,11 @@
     }
    ],
    "source": [
-    "print(get_results_table_per_label_other(preds_other[0], test_ys[0], test_labels_[0], label_metrics).T.to_latex())"
+    "print(\n",
+    "    get_results_table_per_label_other(\n",
+    "        preds_other[0], test_ys[0], test_labels_[0], label_metrics\n",
+    "    ).T.to_latex()\n",
+    ")"
    ]
   },
   {
@@ -499,7 +550,11 @@
     }
    ],
    "source": [
-    "print(get_results_table_per_label_other(preds_other[1], test_ys[1], test_labels_[1], label_metrics).T.to_latex())"
+    "print(\n",
+    "    get_results_table_per_label_other(\n",
+    "        preds_other[1], test_ys[1], test_labels_[1], label_metrics\n",
+    "    ).T.to_latex()\n",
+    ")"
    ]
   },
   {
@@ -508,8 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(2, 2, figsize=(12, 12))\n",
-    "\n"
+    "fig, ax = plt.subplots(2, 2, figsize=(12, 12))"
    ]
   },
   {
@@ -530,17 +584,19 @@
     "    ax[0].set_title(\"Loss curve during training\")\n",
     "    ax[0].legend(title=\"Dataset\")\n",
     "    ax[0].set_xlabel(\"Epoch\")\n",
-    "    ax[0].set_xticks(np.arange(N), np.arange(1, N+1))\n",
+    "    ax[0].set_xticks(np.arange(N), np.arange(1, N + 1))\n",
     "\n",
     "    ax[1].plot(acc, label=\"Training\", linestyle=\"-\")\n",
     "    ax[1].plot(val_acc, label=\"Validation\", linestyle=\"--\")\n",
     "    ax[1].set_title(\"Accuracy curve during training\")\n",
     "    ax[1].legend(title=\"Dataset\")\n",
     "    ax[1].set_xlabel(\"Epoch\")\n",
-    "    ax[1].set_xticks(np.arange(N), np.arange(1, N+1))\n",
+    "    ax[1].set_xticks(np.arange(N), np.arange(1, N + 1))\n",
     "    plt.suptitle(f\"Window length: {window_length}\")\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(os.path.join(\"..\", \"figures\", f\"other_training_results_{window_length}.pdf\"))\n",
+    "    plt.savefig(\n",
+    "        os.path.join(\"..\", \"figures\", f\"other_training_results_{window_length}.pdf\")\n",
+    "    )\n",
     "    plt.show()"
    ]
   },
