--- a/notebooks/main_results.ipynb
+++ b/notebooks/main_results.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import re\n",
     "\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,33 +65,33 @@
        "      <td>50</td>\n",
        "      <td>multi_state</td>\n",
        "      <td>CPDetector10</td>\n",
-       "      <td>0.727273</td>\n",
-       "      <td>4.153312</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.842857</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>1.414214</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.971429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>50</td>\n",
        "      <td>multi_state</td>\n",
        "      <td>CPDetector15</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>4.330127</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.671429</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>50</td>\n",
        "      <td>multi_state</td>\n",
        "      <td>CPDetector20</td>\n",
-       "      <td>0.545455</td>\n",
-       "      <td>1.632993</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.800000</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>2.121320</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.957143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -110,20 +111,20 @@
       "text/plain": [
        "   traj_length        label      detector        f1      rmse   jaccard  \\\n",
        "0           50  multi_state      Baseline  0.444444  1.414214  0.285714   \n",
-       "1           50  multi_state  CPDetector10  0.727273  4.153312  0.571429   \n",
-       "2           50  multi_state  CPDetector15  0.666667  4.330127  0.500000   \n",
-       "3           50  multi_state  CPDetector20  0.545455  1.632993  0.375000   \n",
+       "1           50  multi_state  CPDetector10  0.444444  1.414214  0.285714   \n",
+       "2           50  multi_state  CPDetector15  0.250000  0.000000  0.142857   \n",
+       "3           50  multi_state  CPDetector20  0.444444  2.121320  0.285714   \n",
        "4           50  confinemnet      Baseline  0.666667  0.000000  0.500000   \n",
        "\n",
        "   annotation_error  alpha_cp  \n",
        "0                 5  0.971429  \n",
-       "1                 3  0.842857  \n",
-       "2                 2  0.671429  \n",
-       "3                 3  0.800000  \n",
+       "1                 5  0.971429  \n",
+       "2                 6  1.000000  \n",
+       "3                 5  0.957143  \n",
        "4                 1  1.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,12 +148,18 @@
     "        ]\n",
     "        .agg(\"mean\")\n",
     "    ).to_latex(float_format=\"%.4f\")\n",
-    "    return latex"
+    "    return latex\n",
+    "\n",
+    "def replace_floats_with_math(text):\n",
+    "    return re.sub(r\"(\\d+\\.\\d+)\", r\"$\\1$\", text)\n",
+    "\n",
+    "def get_table(length):\n",
+    "    return replace_floats_with_math(get_table_per_length(length))   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,30 +171,30 @@
       " &  & f1 & rmse & jaccard & annotation_error & alpha_cp \\\\\n",
       "label & detector &  &  &  &  &  \\\\\n",
       "\\midrule\n",
-      "\\multirow[t]{4}{*}{confinemnet} & Baseline & 0.6586 & 0.6706 & 0.5223 & 1.2127 & 0.8982 \\\\\n",
-      " & CPDetector10 & 0.8150 & 0.4241 & 0.7402 & 0.8416 & 0.9527 \\\\\n",
-      " & CPDetector15 & 0.7814 & 0.6396 & 0.6968 & 0.9845 & 0.9332 \\\\\n",
-      " & CPDetector20 & 0.7760 & 0.6414 & 0.6929 & 0.9658 & 0.9295 \\\\\n",
+      "\\multirow[t]{4}{*}{confinemnet} & Baseline & $0.6586$ & $0.6706$ & $0.5223$ & $1.2127$ & $0.8982$ \\\\\n",
+      " & CPDetector10 & $0.8459$ & $0.1927$ & $0.7883$ & $0.7686$ & $0.9859$ \\\\\n",
+      " & CPDetector15 & $0.8450$ & $0.1522$ & $0.7866$ & $0.7888$ & $0.9907$ \\\\\n",
+      " & CPDetector20 & $0.8329$ & $0.3520$ & $0.7709$ & $0.8043$ & $0.9716$ \\\\\n",
       "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{dimmerization} & Baseline & 0.6757 & 0.5123 & 0.5453 & 1.3138 & 0.9403 \\\\\n",
-      " & CPDetector10 & 0.8232 & 0.3407 & 0.7572 & 0.8918 & 0.9672 \\\\\n",
-      " & CPDetector15 & 0.7896 & 0.4000 & 0.7123 & 1.0402 & 0.9601 \\\\\n",
-      " & CPDetector20 & 0.7985 & 0.3580 & 0.7270 & 1.0031 & 0.9656 \\\\\n",
+      "\\multirow[t]{4}{*}{dimmerization} & Baseline & $0.6757$ & $0.5123$ & $0.5453$ & $1.3138$ & $0.9403$ \\\\\n",
+      " & CPDetector10 & $0.8645$ & $0.1625$ & $0.8212$ & $0.7929$ & $0.9888$ \\\\\n",
+      " & CPDetector15 & $0.8647$ & $0.1336$ & $0.8213$ & $0.8022$ & $0.9909$ \\\\\n",
+      " & CPDetector20 & $0.8561$ & $0.2181$ & $0.8070$ & $0.8331$ & $0.9879$ \\\\\n",
       "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{immobile} & Baseline & 0.6646 & 0.3647 & 0.5294 & 1.4152 & 0.9667 \\\\\n",
-      " & CPDetector10 & 0.8541 & 0.2229 & 0.7959 & 0.7876 & 0.9776 \\\\\n",
-      " & CPDetector15 & 0.7951 & 0.1575 & 0.7232 & 1.0475 & 0.9762 \\\\\n",
-      " & CPDetector20 & 0.8151 & 0.2022 & 0.7538 & 0.9794 & 0.9755 \\\\\n",
+      "\\multirow[t]{4}{*}{immobile} & Baseline & $0.6646$ & $0.3647$ & $0.5294$ & $1.4152$ & $0.9667$ \\\\\n",
+      " & CPDetector10 & $0.9310$ & $0.1779$ & $0.9022$ & $0.5166$ & $0.9894$ \\\\\n",
+      " & CPDetector15 & $0.9184$ & $0.1185$ & $0.8869$ & $0.5911$ & $0.9940$ \\\\\n",
+      " & CPDetector20 & $0.8936$ & $0.1904$ & $0.8585$ & $0.6973$ & $0.9884$ \\\\\n",
       "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{multi_state} & Baseline & 0.5671 & 1.6320 & 0.4216 & 3.2922 & 0.8932 \\\\\n",
-      " & CPDetector10 & 0.6577 & 1.4447 & 0.5227 & 2.5984 & 0.8755 \\\\\n",
-      " & CPDetector15 & 0.6238 & 1.6789 & 0.4831 & 2.7516 & 0.8477 \\\\\n",
-      " & CPDetector20 & 0.5650 & 1.5718 & 0.4248 & 3.1953 & 0.8801 \\\\\n",
+      "\\multirow[t]{4}{*}{multi_state} & Baseline & $0.5671$ & $1.6320$ & $0.4216$ & $3.2922$ & $0.8932$ \\\\\n",
+      " & CPDetector10 & $0.4978$ & $0.3341$ & $0.3713$ & $3.7516$ & $0.9804$ \\\\\n",
+      " & CPDetector15 & $0.5268$ & $0.4831$ & $0.3972$ & $3.6031$ & $0.9713$ \\\\\n",
+      " & CPDetector20 & $0.5377$ & $0.9689$ & $0.4030$ & $3.5156$ & $0.9427$ \\\\\n",
       "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{single_state} & Baseline & 0.6455 & 0.0000 & 0.4961 & 1.2304 & 1.0000 \\\\\n",
-      " & CPDetector10 & 0.6830 & 0.0000 & 0.5755 & 1.3871 & 1.0000 \\\\\n",
-      " & CPDetector15 & 0.5776 & 0.0000 & 0.4545 & 2.0549 & 1.0000 \\\\\n",
-      " & CPDetector20 & 0.6687 & 0.0000 & 0.5571 & 1.4279 & 1.0000 \\\\\n",
+      "\\multirow[t]{4}{*}{single_state} & Baseline & $0.6455$ & $0.0000$ & $0.4961$ & $1.2304$ & $1.0000$ \\\\\n",
+      " & CPDetector10 & $0.9856$ & $0.0000$ & $0.9791$ & $0.0470$ & $1.0000$ \\\\\n",
+      " & CPDetector15 & $0.9815$ & $0.0000$ & $0.9726$ & $0.0580$ & $1.0000$ \\\\\n",
+      " & CPDetector20 & $0.9183$ & $0.0000$ & $0.8848$ & $0.3009$ & $1.0000$ \\\\\n",
       "\\cline{1-7}\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
@@ -196,12 +203,12 @@
     }
    ],
    "source": [
-    "print(get_table_per_length(50))"
+    "print(get_table(50))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,79 +220,30 @@
       " &  & f1 & rmse & jaccard & annotation_error & alpha_cp \\\\\n",
       "label & detector &  &  &  &  &  \\\\\n",
       "\\midrule\n",
-      "\\multirow[t]{4}{*}{confinemnet} & Baseline & 0.5468 & 0.8709 & 0.4112 & 2.0137 & 0.8314 \\\\\n",
-      " & CPDetector10 & 0.7391 & 0.7415 & 0.6418 & 1.3430 & 0.9136 \\\\\n",
-      " & CPDetector15 & 0.6878 & 0.8259 & 0.5828 & 1.6753 & 0.8853 \\\\\n",
-      " & CPDetector20 & 0.6952 & 1.0822 & 0.5924 & 1.5899 & 0.8785 \\\\\n",
+      "\\multirow[t]{4}{*}{confinemnet} & Baseline & $0.5102$ & $1.1637$ & $0.3860$ & $2.8450$ & $0.7985$ \\\\\n",
+      " & CPDetector10 & $0.7606$ & $0.3854$ & $0.6855$ & $1.7783$ & $0.9718$ \\\\\n",
+      " & CPDetector15 & $0.7580$ & $0.3998$ & $0.6773$ & $1.7643$ & $0.9699$ \\\\\n",
+      " & CPDetector20 & $0.7593$ & $0.7877$ & $0.6750$ & $1.6884$ & $0.9373$ \\\\\n",
       "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{dimmerization} & Baseline & 0.5651 & 0.9548 & 0.4333 & 2.1342 & 0.8597 \\\\\n",
-      " & CPDetector10 & 0.7258 & 0.5435 & 0.6312 & 1.4728 & 0.9202 \\\\\n",
-      " & CPDetector15 & 0.6904 & 0.7601 & 0.5856 & 1.6470 & 0.8956 \\\\\n",
-      " & CPDetector20 & 0.6964 & 0.7615 & 0.5962 & 1.6534 & 0.9008 \\\\\n",
+      "\\multirow[t]{4}{*}{dimmerization} & Baseline & $0.5043$ & $1.0361$ & $0.3797$ & $3.3270$ & $0.8483$ \\\\\n",
+      " & CPDetector10 & $0.7448$ & $0.3662$ & $0.6777$ & $2.3365$ & $0.9767$ \\\\\n",
+      " & CPDetector15 & $0.7486$ & $0.3436$ & $0.6803$ & $2.3207$ & $0.9765$ \\\\\n",
+      " & CPDetector20 & $0.7425$ & $0.5963$ & $0.6665$ & $2.2986$ & $0.9584$ \\\\\n",
       "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{immobile} & Baseline & 0.5585 & 0.5261 & 0.4346 & 2.4921 & 0.9368 \\\\\n",
-      " & CPDetector10 & 0.8027 & 0.3055 & 0.7267 & 1.3318 & 0.9672 \\\\\n",
-      " & CPDetector15 & 0.7076 & 0.2459 & 0.6161 & 1.8208 & 0.9594 \\\\\n",
-      " & CPDetector20 & 0.7254 & 0.2499 & 0.6417 & 1.6950 & 0.9568 \\\\\n",
+      "\\multirow[t]{4}{*}{immobile} & Baseline & $0.5344$ & $0.6962$ & $0.4269$ & $3.2958$ & $0.9227$ \\\\\n",
+      " & CPDetector10 & $0.9034$ & $0.3536$ & $0.8589$ & $1.1094$ & $0.9804$ \\\\\n",
+      " & CPDetector15 & $0.8883$ & $0.2796$ & $0.8432$ & $1.2388$ & $0.9845$ \\\\\n",
+      " & CPDetector20 & $0.8397$ & $0.3521$ & $0.7859$ & $1.5131$ & $0.9764$ \\\\\n",
       "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{multi_state} & Baseline & 0.5314 & 2.1011 & 0.3801 & 5.2982 & 0.8567 \\\\\n",
-      " & CPDetector10 & 0.6279 & 1.8669 & 0.4794 & 4.0415 & 0.8319 \\\\\n",
-      " & CPDetector15 & 0.5937 & 2.1481 & 0.4425 & 4.4737 & 0.8080 \\\\\n",
-      " & CPDetector20 & 0.5357 & 2.1013 & 0.3901 & 5.0845 & 0.8301 \\\\\n",
+      "\\multirow[t]{4}{*}{multi_state} & Baseline & $0.5068$ & $2.2608$ & $0.3579$ & $6.9969$ & $0.8310$ \\\\\n",
+      " & CPDetector10 & $0.3769$ & $0.5189$ & $0.2684$ & $8.7141$ & $0.9753$ \\\\\n",
+      " & CPDetector15 & $0.4484$ & $0.9982$ & $0.3219$ & $8.1469$ & $0.9581$ \\\\\n",
+      " & CPDetector20 & $0.4977$ & $1.9269$ & $0.3565$ & $7.4781$ & $0.8982$ \\\\\n",
       "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{single_state} & Baseline & 0.5168 & 0.0000 & 0.3891 & 2.3756 & 1.0000 \\\\\n",
-      " & CPDetector10 & 0.5311 & 0.0000 & 0.4139 & 2.6977 & 1.0000 \\\\\n",
-      " & CPDetector15 & 0.3933 & 0.0000 & 0.2757 & 4.3221 & 1.0000 \\\\\n",
-      " & CPDetector20 & 0.4781 & 0.0000 & 0.3570 & 3.1679 & 1.0000 \\\\\n",
-      "\\cline{1-7}\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(get_table_per_length(85))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\begin{tabular}{llrrrrr}\n",
-      "\\toprule\n",
-      " &  & f1 & rmse & jaccard & annotation_error & alpha_cp \\\\\n",
-      "label & detector &  &  &  &  &  \\\\\n",
-      "\\midrule\n",
-      "\\multirow[t]{4}{*}{confinemnet} & Baseline & 0.5102 & 1.1637 & 0.3860 & 2.8450 & 0.7985 \\\\\n",
-      " & CPDetector10 & 0.7224 & 0.8562 & 0.6197 & 1.6899 & 0.8964 \\\\\n",
-      " & CPDetector15 & 0.6606 & 1.0456 & 0.5463 & 2.0357 & 0.8550 \\\\\n",
-      " & CPDetector20 & 0.6733 & 1.2672 & 0.5706 & 1.9643 & 0.8355 \\\\\n",
-      "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{dimmerization} & Baseline & 0.5043 & 1.0361 & 0.3797 & 3.3270 & 0.8483 \\\\\n",
-      " & CPDetector10 & 0.6877 & 0.7221 & 0.5866 & 2.2954 & 0.9159 \\\\\n",
-      " & CPDetector15 & 0.6344 & 0.8463 & 0.5202 & 2.4376 & 0.8799 \\\\\n",
-      " & CPDetector20 & 0.6512 & 1.0105 & 0.5417 & 2.4739 & 0.8880 \\\\\n",
-      "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{immobile} & Baseline & 0.5344 & 0.6962 & 0.4269 & 3.2958 & 0.9227 \\\\\n",
-      " & CPDetector10 & 0.7660 & 0.4089 & 0.6763 & 1.6579 & 0.9524 \\\\\n",
-      " & CPDetector15 & 0.6535 & 0.3603 & 0.5474 & 2.4022 & 0.9434 \\\\\n",
-      " & CPDetector20 & 0.6702 & 0.3593 & 0.5729 & 2.2712 & 0.9408 \\\\\n",
-      "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{multi_state} & Baseline & 0.5068 & 2.2608 & 0.3579 & 6.9969 & 0.8310 \\\\\n",
-      " & CPDetector10 & 0.6288 & 2.0857 & 0.4782 & 5.1937 & 0.8139 \\\\\n",
-      " & CPDetector15 & 0.6029 & 2.3401 & 0.4482 & 5.4703 & 0.7765 \\\\\n",
-      " & CPDetector20 & 0.5447 & 2.4823 & 0.3939 & 6.2922 & 0.7976 \\\\\n",
-      "\\cline{1-7}\n",
-      "\\multirow[t]{4}{*}{single_state} & Baseline & 0.4804 & 0.0000 & 0.3802 & 3.2938 & 1.0000 \\\\\n",
-      " & CPDetector10 & 0.4503 & 0.0000 & 0.3321 & 3.7362 & 1.0000 \\\\\n",
-      " & CPDetector15 & 0.3084 & 0.0000 & 0.2105 & 6.5387 & 1.0000 \\\\\n",
-      " & CPDetector20 & 0.3722 & 0.0000 & 0.2612 & 4.8910 & 1.0000 \\\\\n",
+      "\\multirow[t]{4}{*}{single_state} & Baseline & $0.4804$ & $0.0000$ & $0.3802$ & $3.2938$ & $1.0000$ \\\\\n",
+      " & CPDetector10 & $0.9725$ & $0.0000$ & $0.9598$ & $0.0900$ & $1.0000$ \\\\\n",
+      " & CPDetector15 & $0.9510$ & $0.0000$ & $0.9296$ & $0.1675$ & $1.0000$ \\\\\n",
+      " & CPDetector20 & $0.7952$ & $0.0000$ & $0.7199$ & $0.8436$ & $1.0000$ \\\\\n",
       "\\cline{1-7}\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
@@ -294,7 +252,7 @@
     }
    ],
    "source": [
-    "print(get_table_per_length(120))"
+    "print(get_table(120))"
    ]
   },
   {
